--- a/newstyle.css
+++ b/newstyle.css
@@ -38,20 +38,20 @@ li a{
     color: black;
 }
 
-.main_game_container{
+.mainGame_container{
     background-color:yellow;
     grid-column: 1;
     grid-row: 2;
 
 }
 
-#start_container{
+#startContainer{
     grid-column: 1;
     grid-row: 3;
     /*background-color: yellow;*/   
 }
 
-.start_button{
+.startButton{
 background-color: transparent;
 width: 100%;
 height: 75%;
@@ -63,26 +63,26 @@ border: none;
 
 /****************************************/
 
-#head_title{
+#headTitle{
     grid-column: 1;
     grid-row: 2;
     text-align: center;
     font-size: 175%;
 }
 
-#character_button_container{
+#characterButtonContainer{
     grid-column: 1;
     grid-row: 3;
     text-align: center;
 }
 
-#random_court_container{
+#randomCourtContainer{
     grid-column: 1;
     grid-row: 4;
     text-align: center;
 }
 
-#user_character{
+#userCharacter{
     grid-column: 1;
     grid-row: 2;
     float: left;
@@ -91,7 +91,7 @@ border: none;
     font-size: 50px;
 }
 
-#computer_character{
+#computerCharacter{
     grid-column: 1;
     grid-row: 2;
     float: right; 
@@ -101,7 +101,7 @@ border: none;
     font-size: 50px;
 }
 
-#court_select{
+#courtSelect{
     grid-column: 1;
     grid-row: 2;
     /*margin-left: 600px;*/
@@ -109,7 +109,7 @@ border: none;
     text-align: center;
 }
 
-#user_score{
+#userScore{
     float: left;
     /*margin-left: 50px;*/
     text-align: center;
@@ -118,7 +118,7 @@ border: none;
 
 }
 
-#computer_score{
+#computerScore{
     float: right;
     /*margin-right: 50px;*/
     text-align: center;
@@ -127,7 +127,7 @@ border: none;
 
 }
 
-#game_buttons{
+#gameButtons{
     grid-column: 1;
     grid-row: 4;
     display: flex;
@@ -135,12 +135,12 @@ border: none;
     justify-content: center;
     }
 
-    #user_move{
+    #userMove{
         float: left;
         font-size: 40px;
     }
     
-    #computer_move{
+    #computerMove{
         float: right;
         font-size: 40px;
     }
@@ -150,7 +150,7 @@ border: none;
         grid-row: 3;
     }
 
-    #match_response{
+    #matchResponse{
         text-align: center;
         font-size: 20px;
         color: black;
@@ -195,19 +195,19 @@ border: none;
             }
             
             
-            .main_game_container{
+            .mainGameContainer{
                 background-color:yellow;
                 grid-column: 1;
                 grid-row: 2;
             }
             
-            #start_container{
+            #startContainer{
                 grid-column: 1;
                 grid-row: 3;
                 /*background-color: yellow;*/   
             }
             
-            .start_button{
+            .startButton{
                 background-color: transparent;
                 width: 100%;
                 height: 75%;
@@ -217,7 +217,7 @@ border: none;
                 border: none;
             }
 
-            #head_title{
+            #headTitle{
                 grid-column: 1;
                 grid-row: 2;
                 text-align: center;
@@ -225,7 +225,7 @@ border: none;
 
             }
 
-            #user_score{
+            #userScore{
                 float: left;
                 /*margin-left: 50px;*/
                 text-align: center;
@@ -234,7 +234,7 @@ border: none;
             
             }
 
-            #game_buttons{
+            #gameButtons{
                 grid-column: 1;
                 grid-row: 5;
                 display: flex;
@@ -242,7 +242,7 @@ border: none;
                 justify-content: center;
                 }
             
-            #computer_score{
+            #computerScore{
                 float: right;
                 /*margin-right: 55px;*/
                 text-align: center;
@@ -251,7 +251,7 @@ border: none;
             
             }
 
-            #user_character{
+            #userCharacter{
                 grid-column: 1;
                 grid-row: 2;
                 float: left;
@@ -260,7 +260,7 @@ border: none;
                 font-size: 20px;
             }
             
-            #computer_character{
+            #computerCharacter{
                 grid-column: 1;
                 grid-row: 2;
                 float: right; 
@@ -270,7 +270,7 @@ border: none;
                 font-size: 20px;
             }
 
-            #court_select{
+            #courtSelect{
                 grid-column: 1;
                 grid-row: 2;
                 /*margin-left: 600px;*/
@@ -283,17 +283,17 @@ border: none;
                 grid-row: 3;
             }
 
-            #user_move{
+            #userMove{
                 float: left;
                 font-size: 20px;
             }
             
-            #computer_move{
+            #computerMove{
                 float: right;
                 font-size: 20px;
             }
         
-            #match_response{
+            #matchResponse{
                 text-align: center;
                 font-size: 15px;
                 }
